--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start" : "npx json-server --watch db.json --port 5001"
   },
   "dependencies": {
     "json-server": "^0.17.4",
